--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,9 +1,8 @@
 server {
     listen 80;
-    location /api/docs/ {
-        root /usr/share/nginx/html;
-        try_files $uri $uri/redoc.html;
-    }
+
+    server_name foodgram.stanislavsemenov.ru 158.160.40.250 85.193.85.73;
+
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
@@ -18,4 +17,37 @@ server {
         root   /var/html/frontend/;
       }
 
+    location /api/docs/ {
+        root /usr/share/nginx/html;
+        try_files $uri $uri/redoc.html;
+    }
+
+    location /static/admin/ {
+        autoindex on;
+        root /var/html/;
+    }
+
+    location /static/rest_framework/ {
+        autoindex on;
+        root /var/html/;
+    }
+
+    location /media/ {
+        autoindex on;
+        root /var/html/;
+    }
+
+    location /api/ {
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Server $host;
+        proxy_pass http://backend:8000;
+    }
+
+    location /admin/ {
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Server $host;
+        proxy_pass http://backend:8000/admin/;
+    }
 }
