--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
-
-    server_name foodgram.stanislavsemenov.ru 158.160.40.250 85.193.85.73;
+    server_name foodgram.stanislavsemenov.ru 158.160.40.250;
+    server_tokens off;
 
     location / {
         root /usr/share/nginx/html;
@@ -20,6 +20,10 @@ server {
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
+    }
+
+    location /docs/{
+        proxy_pass http://backend:8000/docs/;
     }
 
     location /static/admin/ {
